--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
     height: 100vh;
     background-color: #f7f7f7;
 }*/
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     text-align: center;
     background-color: #222;
@@ -27,6 +34,7 @@ h1 {
     text-shadow: 0 0 10px yellow, 0 0 20px orange;
 
     margin: 0 auto;
+    margin-bottom: .75em;
     width: 75%;
     /* background-color: aqua; */
 
@@ -45,7 +53,7 @@ h1 {
 /* Animación de escritura */
 @keyframes typing {
     from { width: 0; opacity: 0; visibility: visible;}
-    to { width: 100%; opacity: 1;}
+    to { width: 90%; opacity: 1;}
 }
 
 @keyframes blink {
@@ -95,6 +103,7 @@ p {
     /* background-color: green; */
     font-size: 1rem;
     opacity: 1;
+    margin-top: 5px;
 }
 
 
@@ -107,7 +116,8 @@ p {
     height: 300px;
 
     /* position: relative; */
-    margin-top: 30px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .picture > img{
@@ -242,6 +252,8 @@ h1 {
 
 .buttons {
     margin-top: 30px;
+    display: flex;
+    gap: 1px;
 }
 button {
     font-size: 1.2em;
@@ -250,6 +262,9 @@ button {
     border: none;
     cursor: pointer;
     border-radius: 10px;
+
+    width: 100%;
+    flex-grow: 1;
 }
 .like {
     background-color: yellow;
