--- a/style.css
+++ b/style.css
@@ -199,10 +199,13 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 10px;
+    margin: 0 auto;
     margin-top: 20px;
 
     position: relative;
     /* background-color: aqua; */
+    max-width: 380px;
+    width: 100%;
 }
 /* .flower {
     width: 50px;
